--- a/delivery.html
+++ b/delivery.html
@@ -456,7 +456,7 @@
 
     <!-- Loading -->
     <div class="loading" id="loading">
-        <img src="loading.png" alt="Loading">
+        <img src="https://firebasestorage.googleapis.com/v0/b/inventario-35d6b.appspot.com/o/RETOM%20COMPLETO%20(2).png?alt=media&token=bcb475a5-edf6-494a-96e5-ca8f0a8ae005" alt="Loading">
     </div>
 
     <script type="module">
