--- a/crear-cuenta.html
+++ b/crear-cuenta.html
@@ -239,7 +239,7 @@
       const modal = document.getElementById('noAdminModal');
       modal.style.display = 'flex';
       setTimeout(() => {
-        window.location.href = "index.html"; // Redirigir después de 3 segundos
+        window.location.href = "#"; // Redirigir después de 3 segundos
       }, 3000);
     }
 
@@ -390,7 +390,7 @@
     });
     document.getElementById('closeNoAdminModal').addEventListener('click', () => {
       closeModal('noAdminModal');
-      window.location.href = "index.html"; // Redirigir al cerrar el modal
+      window.location.href = "#"; // Redirigir al cerrar el modal
     });
   </script>
 </body>
