--- a/crear-cuenta.html
+++ b/crear-cuenta.html
@@ -230,7 +230,7 @@
         }
       } else {
         // Redirigir si no está autenticado
-        window.location.href = "login-new.html";
+        window.location.href = "bienvenido.html";
       }
     });
 
@@ -239,7 +239,7 @@
       const modal = document.getElementById('noAdminModal');
       modal.style.display = 'flex';
       setTimeout(() => {
-        window.location.href = "login-new.html"; // Redirigir después de 3 segundos
+        window.location.href = "bienvenido.html"; // Redirigir después de 3 segundos
       }, 3000);
     }
 
