--- a/bienvenido.html
+++ b/bienvenido.html
@@ -131,7 +131,7 @@
           document.getElementById('userPhoto').src = userData.photoURL || "https://via.placeholder.com/150"; // Usar foto de perfil o una por defecto
         }
       } else {
-        window.location.href = "crear-una-cuenta.html"; // Redirigir si no está autenticado
+        window.location.href = "bienvenido.html"; // Redirigir si no está autenticado
       }
     });
   </script>
