--- a/bienvenido.html
+++ b/bienvenido.html
@@ -61,7 +61,7 @@
       animation: pulse 2s infinite;
     }
     .btn-home:hover {
-      background-color: #2575fc;
+      background-color: #2c3e50;
       color: #fff;
       transform: scale(1.1);
     }
