--- a/punto-de-venta.html
+++ b/punto-de-venta.html
@@ -1542,6 +1542,24 @@
     .suggestion.active .suggestion-details {
       display: block;
     }
+
+    /* Oculta las barras de desplazamiento pero mantiene la funcionalidad */
+::-webkit-scrollbar {
+    width: 0 !important;
+    height: 0 !important;
+    display: none;
+}
+
+/* Para Firefox */
+html {
+    scrollbar-width: none;
+}
+
+/* Para Internet Explorer y Edge */
+body {
+    -ms-overflow-style: none;
+}
+    
   </style>
 </head>
 <body>
