--- a/punto-de-venta.html
+++ b/punto-de-venta.html
@@ -855,7 +855,7 @@
       border-radius: 8px;
       cursor: pointer;
       box-shadow: 0 0 10px rgba(21, 160, 135);
-      grid-column: span 3;
+      grid-column: span 1;
     }
 
     #acceptBtn:hover {
@@ -1619,7 +1619,7 @@ body {
           <button class="numeric-btn" data-value="9">9</button>
           <button class="numeric-btn" data-value="0">0</button>
           <button class="numeric-btn" id="backspaceBtn">⌫</button>
-          <button class="numeric-btn" id="acceptBtn">Aceptar</button>
+          <button class="numeric-btn" id="acceptBtn">✔</button>
         </div>
         <!-- Teclado de texto para búsqueda por nombre -->
         <div id="textKeyboard" class="text-keyboard">
